[project]
name = "mcp-chainlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.5.5",
    "dotenv>=0.9.9",
    "fastmcp>=2.4.0",
    "fitz>=0.0.1.dev2",
    "google-generativeai>=0.8.5",
    "langchain-google-genai>=2.0.10",
    "langchain-mcp-adapters>=0.1.1",
    "langgraph>=0.4.5",
    "llama-index>=0.12.37",
    "llama-index-llms-anthropic>=0.6.19",
    "llama-index-llms-gemini>=0.4.14",
    "llama-index-tools-mcp>=0.1.3",
    "mcp>=1.9.1",
    "pymupdf>=1.26.0",
]
